# Beckhoff_Ubuntu_ADS_Library

./: LICENSE  README.md
AdsLib/: ADSConfig.cmake  CMakeLists.txt  go.sh
AdsLib/include/: AdsDef.h  AdsDevice.h  AdsLib.h
AdsLib/src/: AdsDevice.cpp
